ops/head/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: es
  namespace: log
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: es.shixh.com
      http:
        paths:
          - backend:
              serviceName: elasticsearch-client
              servicePort: 9200
            path: /
  tls:
    - hosts:
        - es.shixh.com
    - secretName: ssl-sxh
